--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="container">
         <nav class="navgatior">
             <div class="logo">
-                <a href="#">Duques Foods</a>
+                <a href="#">Duques <span class="span">Foods</span></a>
             </div>
             <div class="menu-burguer">
                 <i class="fa-solid fa-bars nav"></i>
@@ -40,7 +40,7 @@
             </ul>
         </nav>
         <div class="contentHeader">
-            <h1>Duques Foods</h1>
+            <h1>Duques <span class="span">Foods</span></h1>
         </div>
     </header>
     <main class="content">
