--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assest/css/style.css">
+    <link rel="stylesheet" href="assest/css/breakPoint.css">
     <title>Duques Foods</title>
 </head>
 <body>
@@ -46,14 +47,13 @@
     <main class="content">
         <section class="container-action">
             <article class="abouts-container">
-                <img src="imagem/foto-2.jpg" alt="">
+                    <img src="imagem/foto-2.jpg" alt="">
                <div class="content-action">
                 <h3>about us</h3>
                 <h2>Time to Make <br>a Difference</h2>
                 <p>Phasellus scelerisque arcu vestibulum tempor tempor. Donec vulputate leo et metus hendrerit bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. In scelerisque nisl nec ornare euismod.</p>
                 <div class="btn">
                     <a href="#">view more</a>
-                </div>
                </div>
             </article>
             <article class="features-container">
