--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                </div>
             </article>
             <article class="features-container">
-                <img src="imagem/foto-3.jpg" alt="">
                <div class="content-action">
                 <h3>our features</h3>
                 <h2>Create Your <br>Visual Style</h2>
@@ -65,18 +64,34 @@
                 <div class="btn">
                     <a href="#">view more</a>
                 </div>
-               </div>
+            </div>
+            <img src="imagem/foto-3.jpg" alt="">
             </article>
             <article class="desing-container">
                 <img src="imagem/foto-5.jpg" alt="">
                <div class="content-action">
-                <h3>about us</h3>
-                <h2>Time to Make <br>a Difference</h2>
+                <h3>digital studio</h3>
+                <h2>We develop<br>
+                    Digital<br> Strategies</h2>
                 <p>Phasellus scelerisque arcu vestibulum tempor tempor. Donec vulputate leo et metus hendrerit bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. In scelerisque nisl nec ornare euismod.</p>
                 <div class="btn">
                     <a href="#">view more</a>
                 </div>
                </div>
+            </article>
+        </section>
+        <section class="container-images">
+            <article class="card">
+                <img src="imagem/5516002_2861468.jpg" alt="">
+            </article>
+            <article class="card">
+                <img src="imagem/12811014_5069469.jpg" alt="">
+            </article>
+            <article class="card">
+                <img src="imagem/5516002_2861468.jpg" alt="">
+            </article>
+            <article class="card">
+                <img src="imagem/12811014_5069469.jpg" alt="">
             </article>
         </section>
     </main>
