--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main class="content">
         <section class="container-action">
             <article class="abouts-container">
-                    <img src="imagem/foto-2.jpg" alt="">
+                    <img src="imagem/cream.jpg" alt="">
                <div class="content-action">
                 <h3>about us</h3>
                 <h2>Time to Make <br>a Difference</h2>
@@ -65,10 +65,10 @@
                     <a href="#">view more</a>
                 </div>
             </div>
-            <img src="imagem/foto-3.jpg" alt="">
+            <img src="imagem/bacaxi.jpg" alt="">
             </article>
             <article class="desing-container">
-                <img src="imagem/foto-5.jpg" alt="">
+                <img src="imagem/bananaTwo.jpg" alt="">
                <div class="content-action">
                 <h3>digital studio</h3>
                 <h2>We develop<br>
@@ -82,16 +82,16 @@
         </section>
         <section class="container-images">
             <article class="card">
-                <img src="imagem/5516002_2861468.jpg" alt="">
+                <img src="imagem/rtg.jpg" alt="">
             </article>
             <article class="card">
-                <img src="imagem/12811014_5069469.jpg" alt="">
+                <img src="imagem/nana.jpg" alt="">
             </article>
             <article class="card">
-                <img src="imagem/5516002_2861468.jpg" alt="">
+                <img src="imagem/bananas.jpg" alt="">
             </article>
             <article class="card">
-                <img src="imagem/12811014_5069469.jpg" alt="">
+                <img src="imagem/fruits.jpg" alt="">
             </article>
         </section>
     </main>
